# fakoli-plugins

./: .gitattributes  .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
.github/workflows/: cli-to-plugin-tests.yml  fakoli-state-live-github.yml  fakoli-state-tests.yml  fakoli-state.yml  fakoli-style.yml  pr-check.yml  schema-drift.yml  session-evals.yml  session-retro.yml  update-index.yml  validate.yml
archive/: README.md
archive/k8s-sidecar-testing/: CHANGELOG.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CREATE_MARKETPLACE.md  PLUGIN_GUIDELINES.md  POSITIONING.md  TESTING_STANDARDS.md  compatibility.md
docs/roadmap/: PROGRESS.md  (+1 more)
plugins/fakoli-speak/: CHANGELOG.md  Makefile  README.md  pyproject.toml
plugins/fakoli-speak/.claude-plugin/: plugin.json
plugins/fakoli-speak/commands/: autospeak.md  cost.md  provider.md  speak.md  status.md  stop.md  voices.md
plugins/fakoli-speak/docs/plans/: agent-python1-status.md  agent-python3-status.md
plugins/fakoli-speak/hooks/: hooks.json
plugins/fakoli-speak/scripts/: tts.sh
plugins/fakoli-speak/src/fakoli_speak/: __init__.py  autospeak.py  cli.py  cost.py  playback.py  protocol.py  registry.py  tts.py
plugins/fakoli-speak/src/fakoli_speak/providers/: __init__.py  deepgram.py  elevenlabs.py  google.py  macos.py  openai.py
plugins/fakoli-speak/tests/: test_autospeak.py  test_cli.py  test_cost.py  test_tts.py
plugins/safe-fetch/: .mcp.json  CHANGELOG.md  README.md  pyproject.toml
plugins/safe-fetch/.claude-plugin/: plugin.json
plugins/safe-fetch/agents/: web-researcher.md
plugins/safe-fetch/commands/: check-url.md  fetch.md  search.md
plugins/safe-fetch/hooks/: hooks.json
plugins/safe-fetch/hooks/scripts/: block-builtin-fetch.sh  block-builtin-search.sh  sanitize-curl-output.sh
plugins/safe-fetch/skills/safe-fetch/: SKILL.md
plugins/safe-fetch/src/safe_fetch/: __init__.py  __main__.py  extractor.py  rate_limiter.py  sanitizer.py  server.py  url_policy.py
plugins/safe-fetch/tests/: test_extractor.py  test_fetch_security.py  test_rate_limiter.py  test_sanitizer.py  test_url_policy.py
plugins/safe-fetch/tests/fixtures/: injection_payloads.html
registry/: categories.json  index.json  tags.json
schemas/: .field-baseline.json  hooks.schema.json  index.schema.json  marketplace.schema.json  mcp.schema.json  plugin.schema.json
scripts/: bump-plugin.sh  check-all.sh  check-changelogs.sh  check-registry-drift.sh  check-schema-drift.sh  generate-index.sh  lint-frontmatter.py  test-path-resolution.sh  validate.sh
tests/: test-bump-plugin.sh  test-critic-gate-hooks.sh  test-fakoli-crew-agent-models.sh  test-hooks-validation.sh  test-scratch-not-tracked.sh
(+906 files in other folders)
