[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fakoli-speak"
version = "1.0.0"
description = "ElevenLabs TTS for Claude Code — streaming text-to-speech with cost tracking"
requires-python = ">=3.10"
dependencies = [
    "elevenlabs>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
fakoli-speak = "fakoli_speak.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
