[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-fetch-mcp"
version = "0.1.0"
description = "Sanitizing web fetch MCP server for Claude Code — strips prompt injection vectors"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "trafilatura>=2.0.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
